--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,85 @@ body {
 	font-family: Consolas, Courier, monospace;
 }
 
+.background-gradient-1 {
+	position: fixed;
+	top: 40%;
+	left: 0;
+	width: 100%;
+	height: 20%;
+	background: linear-gradient(90deg, rgba(216, 159, 255, 1) 0%, rgba(255, 204, 204, 1) 50%, rgba(255, 232, 199, 1) 100%);
+	/* Example gradient */
+	z-index: -1;
+	/* Ensure it is behind all other content */
+	animation: other-way 10s infinite;
+}
+
+.background-gradient-2 {
+	position: fixed;
+	transform: 40%;
+	top: 40%;
+	left: 0;
+	width: 100%;
+	height: 20%;
+	background: linear-gradient(90deg, rgba(186, 197, 255, 1) 0%, rgba(255, 173, 190, 1) 100%);
+	/* Example gradient */
+	z-index: -1;
+	/* Ensure it is behind all other content */
+	animation: other-way 17s infinite;
+}
+
+.background-gradient-3 {
+	position: fixed;
+	top: 45%;
+	left: 0;
+	width: 100%;
+	height: 10%;
+	background: linear-gradient(90deg, rgba(186, 197, 255, 1) 0%, rgba(255, 173, 190, 1) 100%);
+	/* Example gradient */
+	z-index: -1;
+	/* Ensure it is behind all other content */
+	animation: one-way 20s infinite;
+}
+
+.background-gradient-3 {
+	position: fixed;
+	top: 45%;
+	left: 0;
+	width: 100%;
+	height: 10%;
+	background: linear-gradient(126deg, rgba(0, 255, 6, 1) 0%, rgba(251, 255, 0, 1) 100%);
+	/* Example gradient */
+	z-index: -1;
+	/* Ensure it is behind all other content */
+	animation: one-way 20s infinite;
+}
+
+.background-gradient-4 {
+	position: fixed;
+	top: 50%;
+	left: 30;
+	width: 100%;
+	height: 10%;
+	background: linear-gradient(42deg, rgba(247, 255, 0, 0.46680679107580536) 0%, rgba(251, 255, 0, 0.5536415249693627) 100%);
+	/* Example gradient */
+	z-index: -1;
+	/* Ensure it is behind all other content */
+	animation: one-way 20s infinite;
+}
+
+@keyframes one-way {
+	100% {
+		transform: rotate(360deg);
+	}
+
+}
+
+@keyframes other-way {
+	100% {
+		transform: rotate(-360deg);
+	}
+
+}
 
 .song-div {
 	background: tomato;
@@ -29,6 +108,19 @@ body {
 		transform: rotate(180deg);
 	}
 }
+
+.rorating-spiral {
+	animation: spiral 5s infinite;
+}
+
+@keyframes spiral {
+	100% {
+		transform: rotate(360deg);
+	}
+
+}
+
+
 
 .transforming-dot {
 
