--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@ body {
 
 .background-gradient-1 {
 	position: fixed;
-	top: 40%;
-	left: 0;
-	width: 100%;
-	height: 20%;
+	left: 40%;
+	top: 0;
+	height: 100%;
+	width: 20%;
 	background: linear-gradient(90deg, rgba(216, 159, 255, 1) 0%, rgba(255, 204, 204, 1) 50%, rgba(255, 232, 199, 1) 100%);
 	/* Example gradient */
 	z-index: -1;
@@ -17,7 +17,6 @@ body {
 
 .background-gradient-2 {
 	position: fixed;
-	transform: 40%;
 	top: 40%;
 	left: 0;
 	width: 100%;
@@ -36,19 +35,6 @@ body {
 	width: 100%;
 	height: 10%;
 	background: linear-gradient(90deg, rgba(186, 197, 255, 1) 0%, rgba(255, 173, 190, 1) 100%);
-	/* Example gradient */
-	z-index: -1;
-	/* Ensure it is behind all other content */
-	animation: one-way 20s infinite;
-}
-
-.background-gradient-3 {
-	position: fixed;
-	top: 45%;
-	left: 0;
-	width: 100%;
-	height: 10%;
-	background: linear-gradient(126deg, rgba(0, 255, 6, 1) 0%, rgba(251, 255, 0, 1) 100%);
 	/* Example gradient */
 	z-index: -1;
 	/* Ensure it is behind all other content */
